# kaggle-mcp-server

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: design.md
src/kaggle_mcp_server/: __init__.py  __main__.py  config.py  server.py  utils.py
